# reliavue-native-ai-build

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: health.py  system.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  anomaly.py  building.py  common.py  geometry.py  mission.py  pv_field.py  roof.py  site.py  tenant.py
apps/api/reliavue_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_health.py  test_system.py
apps/web/: README.md  package.json
apps/web/src/: main.tsx
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/app/: main.py
docs/adr/: 0001-use-fastapi-postgis-cdk.md  0002-backend-first-no-shell-pages.md
docs/architecture/: aws-topology.md  data-flow.md  system-overview.md
docs/milestones/: milestone-0.md  milestone-1.md
docs/operations/: branching-policy.md  checkpoint-protocol.md  environment-strategy.md  risk-classification.md
docs/test-gates/: milestone-0-gate.md  milestone-1-gate.md
infra/cdk/: README.md  cdk.context.json  cdk.json  package.json  tsconfig.json
infra/cdk/lib/config/: environments.ts  naming.ts
infra/cdk/lib/constructs/: tags.ts
infra/cdk/lib/stacks/: compute-stack.ts  data-stack.ts  edge-stack.ts  identity-stack.ts  network-stack.ts  observability-stack.ts  secrets-stack.ts  storage-stack.ts
